--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -2,8 +2,11 @@
 <html lang="en"><head>
 {% include "head.html" with JavaScript='tablesorter' %}
 <title>{{ SITE_NAME }} / Contributors</title>
-</head><body>
-{% include "navbar.html" %}
+</head>
+
+<body>
+{% include "navbar.html" with active='contributors' %}
+
 <div class="container-fluid"><h1>Contributors</h1>
 
 <p>A special thanks goes to the authors of these <strong>{{ papers_list.count }} <a href="{% url 'papers:all' %}">publications</a></strong> who have provided unpublished versions of their datasets, including raw quantitative data and/or lists of tested genes.</p>
