--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,7 +10,7 @@
                 <span class="sr-only">Sections</span>
                 <span class="glyphicon glyphicon-menu-hamburger"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'index' %}">{{ SITE_NAME }}</a>
+            <a class="navbar-brand" href="{% url 'index' %}">{{ SITE_NAME }} (<em>beta</em>)</a>
         </div>
 
         <ul class="collapse navbar-collapse nav navbar-nav" id="nb-sections">
