Formatting changes. Added option to download individual datasets.

--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     {% include "head.html" with JavaScript='tablesorter' %}
-    <title>{{ SITE_NAME }} / Experimental conditions / {{ object|capfirst }}</title>
+    <title>{{ object|capfirst }} / Experimental conditions / {{ SITE_NAME }}</title>
 </head><body>
 {% include "navbar.html" with active='conditions' %}
 <div class="container-fluid">
