--- a/conditions/templates/conditions/index.html
+++ b/conditions/templates/conditions/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     {% include "head.html" with JavaScript='tablesorter' %}
-    <title>{{ SITE_NAME }} / Experimental conditions</title>
+    <title>Experimental conditions / {{ SITE_NAME }}</title>
 </head>
 
 <body>
