--- a/phenotypes/templates/phenotypes/detail.html
+++ b/phenotypes/templates/phenotypes/detail.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 {% include "head.html" with JavaScript='tablesorter' %}
-<title>{{ SITE_NAME }} / Phenotypes / {{ object|capfirst }}</title>
+<title>{{ object|capfirst }} / Phenotypes / {{ SITE_NAME }}</title>
 </head>
 
 <body>
