--- a/phenotypes/templates/phenotypes/index.html
+++ b/phenotypes/templates/phenotypes/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en"><head>
     {% include "head.html" with JavaScript='tablesorter' %}
-    <title>{{ SITE_NAME }} / Phenotypes</title>
+    <title>Phenotypes / {{ SITE_NAME }}</title>
 </head><body>
 {% include "navbar.html" with active='phenotypes' %}
 <div class="container-fluid">
