--- a/papers/templates/papers/contributors.html
+++ b/papers/templates/papers/contributors.html
@@ -1,7 +1,7 @@
 {% load staticfiles %}<!DOCTYPE html>
 <html lang="en"><head>
 {% include "head.html" with JavaScript='tablesorter' %}
-<title>{{ SITE_NAME }} / Contributors</title>
+<title>Contributors / {{ SITE_NAME }}</title>
 </head>
 
 <body>
