--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -1,68 +1,111 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
     {% include "head.html" with JavaScript='tablesorter' %}
     <title>{{ object|capfirst }} / Experimental conditions / {{ SITE_NAME }}</title>
-</head><body>
+</head>
+
+<body>
 {% include "navbar.html" with active='conditions' %}
+
 <div class="container-fluid">
-    <h1>{{ object|capfirst }}</h1>
 
-    {% if object.descripton %}
-    <dl class="dl-horizontal">
-        <dt>Description</dt>
-        <dd>{{ object.description }}</dd>
-    </dl>
-    {% endif %}
+    <div class="row">
 
-    {% if object.datasets %}
-    <table id="papersTable" class="tablesorter table table-condensed" width="100%">
-        <thead>
-        <th>Papers</th>
-        <th>Phenotype</th>
-        <th>Collection</th>
-        <th>Tested genes</th>
-        {% if request.GET.verbose >= 1 %}<th>Tested genes: <ul>
-            <li>published</li>
-            <li>available</li>
-        </ul></th>{% endif %}
-        <th>Data type</th>
-        {% if request.GET.verbose >= 1 %}<th>Data: <ul>
-            <li>measured</li>
-            <li>published</li>
-            <li>source</li>
-        </ul></th>{% endif %}
-        </thead><tbody>
-    {% for dataset in object.datasets %}
-    <tr>
-        <td>{{ dataset.paper.link_detail|safe }}</td>
-        {% if request.GET.verbose >= 1 %}<td>{{ dataset.conditionset }}</td>{% endif %}
-        <td>{{ dataset.phenotype.link_detail|safe }}</td>
-        <td>{{ dataset.collection }}</td>
-        <td>{{ dataset.tested_num }}</td>
-        {% if request.GET.verbose >= 1 %}<td><ul>
-        <li>{{ dataset.tested_genes_published|yesno|capfirst }}</li>
-        <li>{{ dataset.tested_source|safe }}</li>
-    </ul></td>{% endif %}
-        <td>{{ dataset.data_available|capfirst }}</td>
-        {% if request.GET.verbose >= 1 %}<td><ul>
-        <li>{{ dataset.data_measured|capfirst }}</li>
-        <li>{{ dataset.data_published|capfirst }}</li>
-        <li>{{ dataset.data_source|safe }}</li>
-        </li></td>{% endif %}
-    </tr>
-    {% endfor %}
-    </tbody>
-    </table>
-    {% else %}
-    <aside class="bg-warning">No papers associated.</aside>
-    {% endif %}
-    {% include "footer.html" %}
-</div{# container-fluid #}>
+        <div class="col-xs-12">
 
-<script>$(document).ready(function(){
- $("#papersTable").tablesorter();
-});</script>
+            <h1>{{ object }}</h1>
+
+            <table class="table">
+                <tr>
+                    <th width="20%" scope="row" class="first">ChEBI name</th>
+                    <td class="first">{{ object.chebi_name }}
+                        {% if object.chebi_id %}
+                            &mdash; <a class="external" href="https://www.ebi.ac.uk/chebi/searchId.do?chebiId=CHEBI:{{ object.chebi_id }}">CHEBI:{{ object.chebi_id }}</a>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <th width="20%" scope="row">PubChem name</th>
+                    <td>{{ object.pubchem_name }}
+                        {% if object.pubchem_id %}
+                            &mdash; <a class="external" href="https://pubchem.ncbi.nlm.nih.gov/compound/{{ object.pubchem_id }}/">PCID:{{ object.pubchem_id }}</a>
+                        {% endif %}
+                    </td>
+                </tr>
+                <tr>
+                    <th width="20%" scope="row">Published names</th>
+                    <td>{{ object.name }}</td>
+                </tr>
+
+            {% if object.descripton %}
+                <tr>
+                    <th width="20%" scope="row">Description</th>
+                    <td>{{ object.description }}</td>
+                </tr>
+            {% endif %}
+
+            </table>
+
+            <h3>Datasets</h3>
+
+            <div class="alert alert-warning" role="alert">
+                <strong>Warning:</strong> These data may contain errors.
+                <p>
+                    YeastPhenome.org is running in beta version.
+                    The data are available for download, but, as of today, we cannot guarantee the absence of errors or code bugs introduced during processing.
+                    This warning will be removed after all cross-checks and validations have been completed.
+                    In the meantime, please, be careful when using the data.
+                </p>
+            </div>
+
+            {% if object.datasets %}
+            <table id="papersTable" class="tablesorter table table-condensed table-hover" width="100%">
+
+                <thead>
+                <th>Papers</th>
+                <th>Phenotype</th>
+                <th>Conditions</th>
+                <th>Collection</th>
+                <th>Tested mutants</th>
+                <th>Data</th>
+                </thead>
+
+                <tbody>
+            {% for dataset in object.datasets %}
+            <tr>
+                <td>{{ dataset.paper.link_detail|safe }}</td>
+                <td>{{ dataset.phenotype.link_detail|safe }}</td>
+                <td>{{ dataset.conditionset.link_detail|safe }}</td>
+                <td>{{ dataset.collection }}</td>
+                <td>{{ dataset.tested_space }}</td>
+                <td>
+                    {% if dataset.has_data_in_db %}
+                    <a class="download" href="/papers/{{ dataset.paper.id }}/{{ DOWNLOAD_PREFIX }}_{{ dataset.paper.pmid }}_{{ dataset.id }}_data.txt">{{ dataset.data_available|capfirst }}</a>
+                    {% else %}
+                    <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+            </table>
+
+            {% endif %}
+
+            {% include "footer.html" %}
+
+        </div>
+    </div>
+</div>
+
+<script>
+    $(document).ready(function(){
+        $("#papersTable").tablesorter();
+    });
+</script>
 
 {% include "ga.html" %}
 
-</body></html>
+</body>
+</html>
