Added data info to the dataset description on paper page in admin
(as suggested by Christie)

--- a/templates/yeastphenome/about.html
+++ b/templates/yeastphenome/about.html
@@ -15,13 +15,13 @@
         <div class="col-xs-12">
             <h1>About</h1>
 
-            <p>YeastPhenome.org is a collaborative project focused on compiling a comprehensive compendium of systematic phenotypic data for budding yeast <em>Saccharomyces cerevisiae</em>.</p>
+            <p>YeastPhenome.org is a collaborative project that aims at constructing a comprehensive compendium of systematic phenotypic data for budding yeast <em>Saccharomyces cerevisiae</em>.</p>
 
             <p>Our goal is to collect, process and share in a standardized format the results of all genome-scale experiments that have examined the yeast deletion collection for any given <a href="{% url 'phenotypes:index' %}">phenotype</a> under any given <a href="{% url 'conditions:index' %}">experimental condition</a>.</p>
 
             <p>We are interested in both quantitative and qualitative phenotypes, as long as, for a given study, the data were collected systematically and for more than 1,000 mutants.</p>
 
-            <p>Our primary source of data are the supplementary materials of the relevant <a href="{% url 'papers:all' %}">publications</a>. On top of that, <a href="{% url 'contributors' %}">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets are specifically flagged to emphasize their special status.</p>
+            <p>Our primary source of data are the supplementary materials of the relevant <a href="{% url 'papers:all' %}">publications</a>. On top of that, <a href="{% url 'contributors' %}">many authors</a> have contributed more complete and previously unpublished versions of their datasets (e.g., raw quantitative values from which the published hit list was derived). These datasets are explicitly flagged to emphasize their special status.</p>
 
             <p>The individual datasets are available for download as soon as they are curated (e.g., see the green "Download all data" button for <a href="http://www.yeastphenome.org/papers/125/">Bleackley MR~MacGillivray RT, 2011</a>). The full compendium of all datasets will be accessible later on, as soon as we finalize the standardized nomenclature of phenotypes and experimental conditions.</p>
 
