Added an explanation for the approx number of tested mutants.

--- a/papers/templates/papers/detail.html
+++ b/papers/templates/papers/detail.html
@@ -87,7 +87,7 @@
                 <td>{{ dataset.phenotype.link_detail|safe }}</td>
                 <td>{{ dataset.conditionset.link_detail|safe }}</td>
                 <td>{{ dataset.collection }}</td>
-                <td>{{ dataset.tested_space }}</td>
+                <td>{{ dataset.tested_space|safe }}</td>
                 <td>
                     {% if dataset.has_data_in_db %}
                     <a class="download" href="/papers/{{ object.id }}/{{ DOWNLOAD_PREFIX }}_{{ object.pmid }}_{{ dataset.id }}_data.txt">{{ dataset.data_available|capfirst }}</a>
