Added conditiontype definition via ChEBI

--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -38,10 +38,10 @@
                     <td>{{ object.name }}</td>
                 </tr>
 
-            {% if object.descripton %}
+            {% if object.definition %}
                 <tr>
                     <th width="20%" scope="row">Description</th>
-                    <td>{{ object.description }}</td>
+                    <td>{{ object.definition }}</td>
                 </tr>
             {% endif %}
 
