Added the option of downloading data for an experimental condition.

--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -93,6 +93,8 @@
             </tbody>
             </table>
 
+            <a href="/conditions/{{ object.id }}/{{ DOWNLOAD_PREFIX }}_condition_{{ object.id }}_data.txt">Download data matrix</a>
+
             {% endif %}
 
             {% include "footer.html" %}
