--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -22,6 +22,11 @@
                     <td class="first">{{ object.chebi_name }}
                         {% if object.chebi_id %}
                             &mdash; <a class="external" href="https://www.ebi.ac.uk/chebi/searchId.do?chebiId=CHEBI:{{ object.chebi_id }}">CHEBI:{{ object.chebi_id }}</a>
+                            <ul>
+                            {% for key, value in object.has_roles.items %}
+                                <li><a href="/conditions/class/{{ value }}/">{{ key }}</a></li>
+                            {% endfor %}
+                            </ul>
                         {% endif %}
                     </td>
                 </tr>
@@ -34,7 +39,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <th width="20%" scope="row">Other names used in publications</th>
+                    <th width="20%" scope="row">Names used in publications</th>
                     <td>
                         {{ object.name }}{% if object.other_names %}, {{ object.other_names }}{% endif %}
                     </td>
