--- a/conditions/templates/conditions/class.html
+++ b/conditions/templates/conditions/class.html
@@ -70,7 +70,7 @@
                     <td>{{ dataset.tested_space|safe }}</td>
                     <td>
                         {% if dataset.has_data_in_db %}
-                        <a class="download" href="/papers/{{ dataset.paper.id }}/{{ DOWNLOAD_PREFIX }}_{{ dataset.paper.pmid }}_{{ dataset.id }}_data.txt">{{ dataset.data_available|capfirst }}</a>
+                        <a class="download" href="/data/datasets/{{ dataset.id }}/{{ DOWNLOAD_PREFIX }}_dataset:{{ dataset.id}}_data.txt">{{ dataset.data_available|capfirst }}</a>
                         {% else %}
                         <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
                         {% endif %}
@@ -81,7 +81,7 @@
                 </tbody>
             </table>
 
-            <a href="/conditions/class/{{ class_name }}/{{ DOWNLOAD_PREFIX }}_condition_class_{{ class_id }}_data.txt">Download data matrix</a>
+            <a href="/data/chebi/{{ class_id }}/{{ DOWNLOAD_PREFIX }}_chebi:{{ class_id }}_data.txt">Download data matrix</a>
 
             {% endif %}
 
