--- a/conditions/templates/conditions/detail.html
+++ b/conditions/templates/conditions/detail.html
@@ -88,7 +88,7 @@
                 <td>{{ dataset.tested_space|safe }}</td>
                 <td>
                     {% if dataset.has_data_in_db %}
-                    <a class="download" href="/papers/{{ dataset.paper.id }}/{{ DOWNLOAD_PREFIX }}_{{ dataset.paper.pmid }}_{{ dataset.id }}_data.txt">{{ dataset.data_available|capfirst }}</a>
+                    <a class="download" href="/data/datasets/{{ dataset.id }}/{{ DOWNLOAD_PREFIX }}_dataset:{{dataset.id}}_data.txt">{{ dataset.data_available|capfirst }}</a>
                     {% else %}
                     <span class="text-muted">{{ dataset.data_available|capfirst }}</span>
                     {% endif %}
@@ -98,7 +98,7 @@
             </tbody>
             </table>
 
-            <a href="/conditions/{{ object.id }}/{{ DOWNLOAD_PREFIX }}_condition_{{ object.id }}_data.txt">Download data matrix</a>
+            <a href="/data/conditions/{{ object.id }}/{{ DOWNLOAD_PREFIX }}_condition:{{ object.id }}_data.txt">Download data matrix</a>
 
             {% endif %}
 
